# anvil-zksync

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  SUPPORTED_APIS.md  deny.toml  rust-toolchain.toml  versions.json
.github/release-please/: config.json
.github/workflows/: build-push-docker.yml  build-stable.yaml  bump-homebrew-formula.yml  cargo-license.yaml  check-pr-title.yml  checks.yaml  docs.yaml  e2e-docker.yml  e2e-rust.yml  e2e.yml  release-please.yml  release.yml  spec.yml  tests.yaml
Formula/: anvil-zksync.rb
crates/api_decl/: Cargo.toml
crates/api_decl/src/: lib.rs
crates/api_decl/src/namespaces/: anvil.rs  anvil_zks.rs  config.rs  eth_test.rs  evm.rs  mod.rs
crates/api_server/: Cargo.toml
crates/api_server/src/: error.rs  lib.rs  server.rs
crates/api_server/src/impls/: anvil.rs  anvil_zks.rs  config.rs  debug.rs  eth.rs  eth_test.rs  evm.rs  mod.rs  net.rs  web3.rs  zks.rs
crates/cli/: Cargo.toml
crates/cli/src/: bytecode_override.rs  cli.rs  main.rs  utils.rs
crates/common/: Cargo.toml
crates/common/src/: address_map.rs  cache.rs  lib.rs  resolver.rs  shell.rs  utils.rs
crates/common/src/data/: predeploys.json
crates/common/src/utils/: cost.rs  format.rs  io.rs  mod.rs  numbers.rs  predeploys.rs
crates/config/: Cargo.toml
crates/config/src/: config.rs  constants.rs  lib.rs  utils.rs
crates/config/src/types/: account_generator.rs  boojum.rs  cache.rs  genesis.rs  mod.rs  transaction_order.rs  zksync_os.rs
crates/console/: Cargo.toml
crates/console/src/: ForgeConsole.json  console_log.rs  ds.rs  hh.rs  lib.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: bootloader_debug.rs  cache.rs  console_log.rs  filters.rs  fork.rs  formatter.rs  http_fork_source.rs  lib.rs  observability.rs  resolver.rs  system_contracts.rs  testing.rs  utils.rs
crates/core/src/formatter/: address.rs  log.rs  mod.rs  pubdata_bytes.rs  transaction.rs
crates/core/src/formatter/errors/: mod.rs  view.rs
crates/core/src/formatter/errors/documentation/: mod.rs  view.rs
crates/core/src/formatter/transaction/: balance_diff.rs  mod.rs  status.rs  summary.rs  view.rs
crates/core/src/formatter/util/: indenting_writer.rs  mod.rs
crates/core/src/namespaces/: anvil.rs  config.rs
crates/core/src/node/: anvil.rs  block_producer.rs  boojumos.rs  call_error_tracer.rs  config_api.rs  debug.rs  error.rs  eth.rs  evm.rs  fee_model.rs  hardhat.rs  in_memory.rs  in_memory_ext.rs  keys.rs  mod.rs  net.rs  pool.rs  sealer.rs  state.rs  state_override.rs  storage_logs.rs  vm.rs  web3.rs  zkos.rs  zks.rs  zksync_os.rs
crates/core/src/node/batch/: executor.rs  factory.rs  mod.rs  shared.rs
crates/core/src/node/diagnostics/: mod.rs  transaction.rs
crates/core/src/node/diagnostics/vm/: balance_diff.rs  mod.rs  traces.rs
crates/core/src/node/inner/: blockchain.rs  fork.rs  fork_storage.rs  in_memory_inner.rs  mod.rs  node_executor.rs  storage.rs  time.rs  vm_runner.rs
crates/core/src/node/traces/: call_error.rs  decoder.rs  mod.rs
crates/core/src/node/zksync_os/: mod.rs
crates/core/src/node/zksync_os/mock/: mod.rs
crates/core/src/node/zksync_os/real/: helpers.rs  mod.rs
crates/l1_sidecar/: Cargo.toml
crates/l1_sidecar/src/: anvil.rs  commitment_generator.rs  l1_executor.rs  l1_sender.rs  l1_watcher.rs  lib.rs  upgrade_tx.rs
crates/l1_sidecar/src/contracts/: mod.rs
crates/l1_sidecar/src/contracts/artifacts/: IZKChain.json
crates/l1_sidecar/src/zkstack_config/: genesis.rs  mod.rs  wallets.rs
crates/traces/: Cargo.toml
crates/traces/src/: abi_utils.rs  lib.rs  writer.rs
crates/traces/src/decode/: error.rs  mod.rs  revert_decoder.rs
crates/traces/src/format/: mod.rs  numbers.rs
crates/traces/src/identifier/: mod.rs  signatures.rs
crates/types/: Cargo.toml
crates/types/src/: api.rs  l2_tx_builder.rs  lib.rs  log.rs  numbers.rs  serde_helpers.rs  show_details.rs  traces.rs  transaction_order.rs
crates/types/src/data/: address_map.json
crates/zksync_error/: Cargo.toml  build.rs
crates/zksync_error/resources/: error-model-dump.json
crates/zksync_error/src/: documentation.rs  identifier.rs  kind.rs  lib.rs  packed.rs  serialized.rs  untyped.rs
crates/zksync_error/src/error/: definitions.rs  domains.rs  mod.rs
docs/: experimental-boojumos.md  experimental-zksyncos.md  zksync-error-howto.md
docs/book/: book.toml
e2e-tests/: .gitignore  hardhat.config.ts  package.json
e2e-tests-rust/: Cargo.toml
e2e-tests-rust/src/: ext.rs  headers_inspector.rs  http_middleware.rs  lib.rs  utils.rs
e2e-tests-rust/src/contracts/: mod.rs
e2e-tests-rust/src/contracts/artifacts/: IBaseToken.json  IBridgehub.json  IExecutor.json  IL1AssetRouter.json  IL1Messenger.json  IL1Nullifier.json  IMailbox.json
e2e-tests-rust/src/provider/: anvil_zksync.rs  mod.rs  testing.rs
e2e-tests-rust/src/test_contracts/: mod.rs
e2e-tests-rust/src/test_contracts/artifacts/: Counter.json
e2e-tests-rust/src/test_contracts/evm-artifacts/: Counter.json
e2e-tests-rust/tests/: evm.rs  l1.rs  lib.rs  protocol.rs  revert.rs
e2e-tests/helpers/: constants.ts  utils.ts
e2e-tests/test/: anvil-apis.test.ts  debug-apis.test.ts  erc20-fixed-paymaster.test.ts  erc721-gated-paymaster.test.ts  eth-apis.test.ts  evm-apis.test.ts  fib.test.ts  hardhat-apis.test.ts  main.test.ts  zks-apis.test.ts
etc/errors/: anvil.json  core.json
etc/test-contracts/: .gitignore  foundry.toml  package.json
l1-setup/: .gitignore  README.md  setup.sh  wallets.yaml
l1-setup/configs/: contracts.yaml  genesis.yaml  v26-contracts.yaml  v26-genesis.yaml  v27-contracts.yaml  v28-contracts.yaml  v28-genesis.yaml
l1-setup/patches/: genesis-patch.yaml  v26-genesis-patch.yaml  v28-genesis-patch.yaml
l1-setup/state/: l1-state-payload.txt  (+7 more)
latest/: 404.html  index.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
scripts/: install.sh  refresh_contracts.sh  refresh_e2e_contracts.sh  refresh_l1_sidecar_contracts.sh  refresh_test_contracts.sh
spec-tests/: Cargo.toml
src/: fork.rs  system_contracts.rs  utils.rs
(+1857 files in other folders)
