[workspace]
members = [
    "crates/api_decl",
    "crates/api_server",
    "crates/cli",
    "crates/config",
    "crates/core",
    "crates/l1_sidecar",
    "crates/types",
    "crates/common",
    "crates/zksync_error",
    "crates/console",
    "crates/traces",
]
resolver = "2"

[profile.dev]
debug = 0

[profile.release]
strip = "debuginfo" # Automatically strip symbols from the binary.
lto = "thin"        # Enable link-time optimization.

[workspace.package]
version = "0.6.1" # x-release-please-version
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/anvil-zksync"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]

[workspace.dependencies]
#########################
# ZKsync dependencies  #
#########################
zksync_mini_merkle_tree = { git = "https://github.com/matter-labs/zksync-era", rev = "core-v28.0.0" }
zksync_multivm = { git = "https://github.com/matter-labs/zksync-era", rev = "core-v28.0.0" }
zksync_contracts = { git = "https://github.com/matter-labs/zksync-era", rev = "core-v28.0.0" }
zksync_basic_types = { git = "https://github.com/matter-labs/zksync-era", rev = "core-v28.0.0" }
zksync_types = { git = "https://github.com/matter-labs/zksync-era", rev = "core-v28.0.0" }
zksync_vm_interface = { git = "https://github.com/matter-labs/zksync-era", rev = "core-v28.0.0" }
zksync_web3_decl = { git = "https://github.com/matter-labs/zksync-era", rev = "core-v28.0.0" }
zksync_telemetry = { git = "https://github.com/matter-labs/zksync-telemetry.git", rev = "f6d8618d870a09467ff24ea32ef57e01af8f311e" }
zksync-error-codegen = { git = "https://github.com/matter-labs/zksync-error", rev = "54e0671189a5bc2ce88e72c36334f98fbbdd228d", default-features = false }
zksync-error-description = { git = "https://github.com/matter-labs/zksync-error", rev = "54e0671189a5bc2ce88e72c36334f98fbbdd228d" }

#########################
# External dependencies #
#########################
anyhow = "1.0"
alloy = { version = "0.12.5", default-features = false }
foundry-common-fmt = { git = "https://github.com/foundry-rs/foundry", rev = "v1.0.0", package = "foundry-common-fmt" }
foundry-macros = { git = "https://github.com/foundry-rs/foundry", rev = "v1.0.0", package = "foundry-macros" }
async-trait = "0.1.85"
chrono = { version = "0.4.31", default-features = false }
clap = { version = "4.2.4", features = ["derive", "env"] }
colored = "2"
eyre = "0.6"
flate2 = "1.0"
function_name = "0.3.0"
futures = { version = "0.3", features = ["compat"] }
hex = "0.4"
http = "1.1.0"
indexmap = "2.0.1"
itertools = "0.13"
jsonrpsee = "0.24"
lazy_static = "1.4"
num = "0.4.3"
once_cell = "1.7"
rand = "0.8"
reqwest = { version = "0.12.12", default-features = false }
rustc-hash = "1.1.0"
semver = "1.0.26"
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.14.0"
serde_json = "1.0"
strum = "0.26.3"
strum_macros = "0.26.4"
serde_yaml = "0.9.33"
tar = "0.4.44"
tabled = "0.18.0"
tempfile = { version = "3.16.0", default-features = false }
thiserror = "1"
time = "0.3.36"
tokio = { version = "1", features = ["full", "tracing"] }
tower = "0.4"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "time",
    "json",
    "local-time",
] }
url = "2.5.4"
colorchoice = "1.0"
anstream = "0.6.18"
anstyle = "1.0.10"
indicatif = "0.17"

#########################
# Test dependencies    #
#########################
httptest = "0.16.3"
maplit = "1.0.2"
test-case = "3.3.1"
backon = "1.3.0"

#########################
# Local dependencies    #
#########################
anvil_zksync_api_decl = { path = "crates/api_decl" }
anvil_zksync_api_server = { path = "crates/api_server" }
anvil_zksync_config = { path = "crates/config" }
anvil_zksync_core = { path = "crates/core" }
anvil_zksync_l1_sidecar = { path = "crates/l1_sidecar" }
anvil_zksync_types = { path = "crates/types" }
anvil_zksync_common = { path = "crates/common" }
zksync_error = { path = "crates/zksync_error" }
anvil_zksync_console = { path = "crates/console" }
anvil_zksync_traces = { path = "crates/traces" }

# macros
derive_more = { version = "1.0", features = ["full"] }
