[package]
name = "anvil-zksync_e2e_tests"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/anvil-zksync"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]
publish = false

[dependencies]
alloy-zksync = "0.8.0"
alloy = { version = "0.8.0", features = ["full", "rlp", "serde", "sol-types", "getrandom", "provider-anvil-api", "json-rpc"] }
anyhow = "1.0"
fs2 = "0.4.3"
tokio = { version = "1", features = ["time", "rt", "process"] }
futures = "0.3.31"
itertools = "0.13.0"
async-trait = "0.1.83"
reqwest = "0.12.9"
reqwest-middleware = { version = "0.4", features = ["json"] }
serde_json = "1"
tower = "0.5"
http = "1.1.0"
anvil_zksync_core = { path = "../crates/core" }
tempdir = "0.3.7"

[dev-dependencies]

[workspace] # ignore higher-level workspace
