[package]
name = "anvil-zksync_e2e_tests"
edition = "2024"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/anvil-zksync"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]
publish = false

[dependencies]
# Keep `alloy-zksync` version in sync with base `alloy` crate to avoid two different sets of dependencies
alloy-zksync = "=1.0.7-alpha.1"
alloy = { version = "=1.0.7", features = [
    "full",
    "rlp",
    "serde",
    "getrandom",
    "provider-anvil-api",
    "provider-anvil-node",
    "json-rpc",
    "contract",
] }

anyhow = "1.0"
fs2 = "0.4.3"
tokio = { version = "1", features = ["time", "rt", "process"] }
futures = "0.3.31"
itertools = "0.13.0"
async-trait = "0.1.86"
reqwest = "0.12.9"
reqwest-middleware = { version = "0.4", features = ["json"] }
serde_json = "1"
tower = "0.5"
http = "1.1.0"
anvil_zksync_core = { path = "../crates/core" }
anvil_zksync_common = { path = "../crates/common" }
tempdir = "0.3.7"
flate2 = "1.0"
hex = "0.4"

[dev-dependencies]
test-casing = "0.1.3"

[workspace] # ignore higher-level workspace
