[package]
name = "anvil_zksync_api_server"
description = "anvil-zksync API server"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anvil_zksync_api_decl.workspace = true
anvil_zksync_core.workspace = true
anvil_zksync_l1_sidecar.workspace = true
anvil_zksync_types.workspace = true
anvil_zksync_common.workspace = true

zksync_types.workspace = true
zksync_web3_decl.workspace = true

anyhow.workspace = true
hex.workspace = true
http.workspace = true
jsonrpsee.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
