[package]
name = "anvil-zksync" # Compatible with the legacy bin crate name
description = "anvil-zksync CLI"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anvil_zksync_core.workspace = true
anvil_zksync_config.workspace = true

zksync_types.workspace = true
zksync_web3_decl.workspace = true

alloy-signer-local.workspace = true
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
eyre.workspace = true
hex.workspace = true
itertools.workspace = true
jsonrpc-core.workspace = true
jsonrpc-http-server.workspace = true
futures.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
