[package]
name = "anvil-zksync" # Compatible with the legacy bin crate name
description = "anvil-zksync CLI"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anvil_zksync_core.workspace = true
anvil_zksync_config.workspace = true
anvil_zksync_api_server.workspace = true
anvil_zksync_types.workspace = true

alloy = { workspace = true, default-features = false, features = ["signer-mnemonic"] }

zksync_types.workspace = true
anyhow.workspace = true
clap.workspace = true
eyre.workspace = true
hex.workspace = true
itertools.workspace = true
futures.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower.workspace = true
tower-http.workspace = true
flate2.workspace = true
url.workspace = true

[dev-dependencies]
tempdir.workspace = true
