[package]
name = "anvil_zksync_common"
description = "anvil-zksync common"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
alloy = { workspace = true, default-features = false, features = ["dyn-abi", "sol-types"] }
anstream.workspace = true
anstyle.workspace = true
zksync_types.workspace = true
serde.workspace = true
serde_json.workspace = true
lazy_static.workspace = true
eyre.workspace = true
reqwest.workspace = true
rustc-hash.workspace = true
clap.workspace = true
zksync_web3_decl.workspace = true
tracing.workspace = true
tokio.workspace = true
colored.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
