[package]
name = "anvil_zksync_config"
description = "anvil-zksync configuration"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anvil_zksync_types.workspace = true

zksync_types.workspace = true
zksync_vm_interface.workspace = true

alloy-signer.workspace = true
alloy-signer-local.workspace = true
clap.workspace = true
colored.workspace = true
hex.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
