[package]
name = "anvil_zksync_console"
description = "anvil-zksync console"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anvil_zksync_common.workspace = true
anvil_zksync_traces.workspace = true

zksync_types.workspace = true
zksync_multivm.workspace = true

alloy.workspace = true
foundry-common-fmt.workspace = true
foundry-macros.workspace = true
derive_more.workspace = true
itertools.workspace = true
colored.workspace = true
