[package]
name = "anvil_zksync_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anvil_zksync_types.workspace = true
anvil_zksync_config.workspace = true
anvil_zksync_common.workspace = true
anvil_zksync_console.workspace = true
anvil_zksync_traces.workspace = true

zksync_mini_merkle_tree.workspace = true
zksync_multivm.workspace = true
zksync_contracts.workspace = true
zksync_types.workspace = true
zksync_web3_decl.workspace = true
zksync_error.workspace = true
zksync-error-description.workspace = true

anyhow.workspace = true
tokio.workspace = true
futures.workspace = true
once_cell.workspace = true

alloy = { workspace = true, default-features = false, features = ["json-abi", "dyn-abi", "sol-types", "eip712"] }

serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
colored.workspace = true
lazy_static.workspace = true
eyre.workspace = true
serde_json.workspace = true
hex.workspace = true
itertools.workspace = true
indexmap.workspace = true
chrono.workspace = true
tar.workspace = true
time.workspace = true
flate2.workspace = true
thiserror.workspace = true
async-trait.workspace = true
url.workspace = true
indicatif.workspace = true
tabled.workspace = true

[dev-dependencies]
maplit.workspace = true
httptest.workspace = true
tempfile.workspace = true
test-case.workspace = true
backon.workspace = true

[build-dependencies]
zksync-error-codegen = { workspace = true, features = ["reqwest-rustls-tls"] }
