[package]
name = "anvil_zksync_l1_sidecar"
description = "anvil-zksync L1 sidecar"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anvil_zksync_common.workspace = true
anvil_zksync_core.workspace = true
anvil_zksync_types.workspace = true

zksync_contracts.workspace = true
zksync_mini_merkle_tree.workspace = true
zksync_types.workspace = true

alloy = { workspace = true, default-features = false, features = ["sol-types", "rpc-types", "providers", "kzg", "provider-anvil-api"] }
anyhow.workspace = true
hex.workspace = true
tempfile.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde_with.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
async-trait.workspace = true
