[package]
name = "anvil_zksync_types"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anvil_zksync_common.workspace = true
hex.workspace = true
zksync_types.workspace = true
zksync_multivm.workspace = true
# TODO: Depending on `clap` here is not the worst thing for now but need to reconsider if this is strictly necessary
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
