[package]
name = "zksync_error"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
zksync_basic_types.workspace = true
lazy_static.workspace = true
serde = { workspace = true, features = ["rc"] }
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
zksync-error-description.workspace = true

[build-dependencies]
zksync-error-codegen = { workspace = true, features = ["reqwest-rustls-tls"] }
